# ThunderTrekking-Public

./: .gitignore  .gitmodules  ColorConfig.py  ColorTracking2.py  ColorTracking2_branco_dbg.py  ColorTracking2_dbg.py  ColorTracking2_old.py  Makefile  Makefile.am  Makefile.in  README.md  _ColorTracking2_com_branco.py  a.out  angulo_desejado.py  app.py  autonomo.c  autonomo.h  bussola.py  calibra_bussola  calibra_bussola.c  calibra_hmc5883l.c  calibra_hmc5883l_.c  calibra_hmc_output1  calibra_hmc_output2  cellphone_sensors_off.sh  cellphone_sensors_on.sh  colors.h  compass.c  compass.h  compass_dump  compass_dump.c  config.status  config_file.c  config_file.h  configuration.txt  configure  configure.ac  cont_array.h  failsafe.c  file_lock.c  (+89 more)
Android/ThunderTrekking/app/src/main/java/org/thunderatz/tiago/thundertrekking/: ListenerRegisterer.java  MainActivity.java  ServerThread.java
Imagem/: Instruções  negativos.txt  positivos.txt
Imagem/Negativos/: googlecode-downloader  googlecode-files
Imagem/Positivos/: cone.vec  gera_positivos.sh  rgb_to_grayscale.sh  teste_cone
Imagem/algoritmos/: extract_tld.sh
Imagem/algoritmos/OpenTLD_patched/: CMakeCache.txt  Makefile  OpenTLDConfig.cmake  cmake_install.cmake
Imagem/algoritmos/OpenTLD_patched/src/libopentld/: Makefile  cmake_install.cmake
Imagem/algoritmos/OpenTLD_patched/src/opentld/: Makefile  cmake_install.cmake
Imagem/algoritmos/OpenTLD_patched/src/opentld/main/: Gui.cpp  Main.cpp  Main.h
Imagem/algoritmos/cascade/: body.cpp  cascade.cpp  links  smiledetect
Imagem/algoritmos/shapes/: shapes  squares
Imagem/algoritmos/surf/: surf1.cpp  surf3.cpp  surf3_1  surf3_1.cpp  surf4  surf_trekking  surf_trekking_gpu.cpp
Imagem/algoritmos/tracking/: tracker.cpp
Main/: .gitignore  Bootstrap  Doxyfile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac
Main/include/: pixy.h
Main/include/linux/: i2c.h
Main/scripts/: average  bluetooth_ps3.service  cellphone_sensors_on.sh  cellphone_sensors_on_auto.sh  cellphone_torch_off.sh  compass_current_diff.sh  gpio-button-overlay.dts  gpio-keys.rules  gpio_pull-up.service  gps_forward.sh  gpsd  main.sh  plot_hmc3.gnuplot  plot_location.gnuplot  rc.local
Main/src/lib/: BNO055.cc  BNO055.hh  Bumper.cc  Bumper.hh  Button.cc  Button.hh  Compass.cc  Compass.hh  GPIO.cc  GPIO.hh  GPIOButton.cc  GPIOButton.hh  GPS.cc  GPS.hh  GPSMonitor.cc  GPSMonitor.hh  GPSStats.cc  GPSStats.hh  I2C.cc  I2C.hh  LeddarEK.cc  LeddarEK.hh  Leds.cc  Leds.hh  LedsI2C.cc  LedsI2C.hh  Maps.hh  PID.cc  PID.hh  Pixy.cc  Pixy.hh  Point.cc  Point.hh  Sensor9DOF.hh  Stats.cc  Stats.hh  ThreadGPS.cc  ThreadGPS.hh  ThreadHmc5883l.cc  ThreadHmc5883l.hh  (+78 more)
Main/src/tests/: Bumper.cc  Bumper.hh  BumperTest.cc  CompassTest.cc  I2C.hh  Leds.cc  Leds.hh  LedsI2C.cc  LedsTest.cc
Main/src/visao/: camera.cpp  camera.hh  cameraMainTest.cc  cameraTest  links  orb_cpu.cpp  orb_gpu  orb_gpu.cpp  orb_gpu_3  orb_gpu_3 (copy).cpp  orb_gpu_3.cpp  orb_gpu_3_test  orb_gpu_3_test.cpp
Main/src/visao/blob/: hsv_blob  hsv_blob.cpp  hsv_blob_gpu  hsv_blob_gpu.cpp
Main/src/visao/canny/: canny  canny.cpp
Main/src/visao/cascade/: body  cascade
Main/src/visao/shapes/: shapes.cpp  squares.cpp
Main/src/visao/surf/: surf1  surf5  surf6  surf_trekking.cpp  surf_trekking_gpu  surf_trekking_gpu.cpp
Main/src/visao/tracking/: track.cpp
Potência/: Makefile  init.c  main.c  main.h  mixagem.c  mixagem.h  radio_isr.c  radio_isr.h  usart.c  usart.h  watchdog.c  watchdog.h
SensorServer/: Makefile.am  Makefile.in  configure  configure.ac
SensorServer/lib/: GPIO.cc  GPIO.hh  gpio_dma.c  gpio_dma.h  hmc5883l.c  hmc5883l_registers.h  i2c.c  ports.h  thread_bigodes.c  thread_bigodes.h  thread_hc_sr04.c  thread_hmc5883l.c  thread_hmc5883l.h  thread_leds.c  thread_leds.h  thread_leds_teste.c  thread_spawn.c  thread_spawn.h  udp_packets.h  udp_receiver.c  udp_receiver.h  udp_sender.h
drivers/bumper/: Makefile  bumper.c
drivers/pind/: .gitignore  pind.c
git/: Makefile.am  README.md  calibra_hmc_output3  camera.c  cellphone_sensors_off.sh  cellphone_torch_off.sh  compass_udp.c  compass_udp.h  config.h  file_lock.h  gps_test.c  gps_udp.c  gps_udp.h  hc_sr04_udp.c  hc_sr04_udp.h  hmc5883l.c  hmc5883l_test.c  hmc5883l_udp.c  hmc_log_file.sh  kill_joystick.sh  kinect_distance.c  kinect_tilt.c  leds_control.c  log.h  motors.c  motors_i2c_force.c  motors_i2c_force_alternating.c  motors_test.c  serial_nmea.c  udp_recv_gps.c
git/Android/ThunderTrekking/app/src/main/java/org/thunderatz/tiago/thundertrekking/: ServerThread.java  TorchServer.java
git/Treino Visão/: Background.txt  Negativos.txt
git/hmc5883l_utils/: plot_hmc_xy.gnuplot  plot_hmc_xz.gnuplot
git/logs/: hmc_log-2014-12-17 17:35:42  hmc_log-2014-12-17 17:51:33
gps/: tsip_interpreter.py
hmc5883l_utils/: plot_hmc_xy_offset.gnuplot  plot_hmc_yz.gnuplot
include/linux/: i2c.h
logs/: hmc_log-2014-12-17 17:51:54  hmc_log-2014-12-17 17:52:57  hmc_log-2014-12-17 17:54:01  hmc_log-2014-12-17 17:54:20  hmc_log-2014-12-17 17:54:24  hmc_log-2014-12-17 17:56:21  hmc_log-2014-12-17 18:05:55  hmc_log-2014-12-17 18:08:31  hmc_log-2014-12-17 18:09:42  hmc_log-2014-12-17 18:10:08  hmc_log-2014-12-17 18:10:13  screenlog.0
misc/: RPi-GPIO
pind/: .gitignore  .pind.ko.cmd  .pind.mod.o.cmd  .pind.o.cmd  Makefile  modules.order  pind.ko  pind.mod.c
pind/.tmp_versions/: pind.mod
random/: cont_array.c  hook.c  hook.h  movement.h  opengl.c  teste_controle_visao.c
random/ideias_finais/: command.h  visao.cpp
serial_tiva/: serial.c  serial_tiva  serial_tiva.c
static/: compass.js  map.html  map.js  video.html
visão/blob/: hsv_blob  hsv_blob.cpp
visão/cascade/: body.cpp
visão/surf/: surf2.cpp
visão/tracking/: track
